# turing_machine

./: CMakeLists.txt  LICENSE
src/: MAKEFILE  a.out  input.txt  main.c  state_list.c  state_list.h  tape.c  tape.h  tm.c  tm.h  transition.h  transitions.c  transitions.h  turing_machine
